fix: added some appointment tests + gradle improvement